--- a/front/regi.html
+++ b/front/regi.html
@@ -50,7 +50,7 @@
 
             try {
                 // 서버로 회원가입 요청
-                const response = await fetch('/signup', {
+                const response = await fetch('/api/signup', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
